--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
   </head>
   <body>
     <div class="container">
-      <div class="computer"></div>
-      <div class="player"></div>
+      <div class="computer">
+        <div class="computer__box">
+          <div class="computer__box--item">B</div>
+          <div class="computer__box--item">R</div>
+          <div class="computer__box--item">Y</div>
+          <div class="computer__box--item">G</div>
+        </div>
+      </div>
+      <div class="player">
+        <div class="player__box">
+          <div class="player__box--item">B</div>
+          <div class="player__box--item">R</div>
+          <div class="player__box--item">Y</div>
+          <div class="player__box--item">G</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
