--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div class="container">
       <div class="computer">
         <div class="computer__box">
-          <div class="computer__box--item">B</div>
-          <div class="computer__box--item">R</div>
-          <div class="computer__box--item">Y</div>
-          <div class="computer__box--item">G</div>
+          <div class="computer__item">B</div>
+          <div class="computer__item">R</div>
+          <div class="computer__item">Y</div>
+          <div class="computer__item">G</div>
         </div>
       </div>
       <div class="player">
         <div class="player__box">
-          <div class="player__box--item">B</div>
-          <div class="player__box--item">R</div>
-          <div class="player__box--item">Y</div>
-          <div class="player__box--item">G</div>
+          <div class="player__item" draggable="true">B</div>
+          <div class="player__item" draggable="true">R</div>
+          <div class="player__item" draggable="true">Y</div>
+          <div class="player__item" draggable="true">G</div>
         </div>
       </div>
     </div>
